Make sure Recommended badge is always aligned with the other badges for Themes

--- a/src/ui/components/RecommendedBadge/styles.scss
+++ b/src/ui/components/RecommendedBadge/styles.scss
@@ -14,6 +14,10 @@
 
   @include respond-to(large) {
     justify-content: flex-end;
+
+    .Addon-theme & {
+      justify-content: flex-start;
+    }
   }
 }
 
